--- a/AventuraSalvaje/WebContent/altaUsuarios/altaUsuario.zul
+++ b/AventuraSalvaje/WebContent/altaUsuarios/altaUsuario.zul
@@ -1,6 +1,6 @@
 <?page title="Alta Usuario" contentType="text/html;charset=UTF-8"?>
 <zk>
 <window title="Alta Usuario" border="normal">
-New Content Here!
+Pollo putitn
 </window>
 </zk>
