--- a/AventuraSalvaje/WebContent/reporteMensual/reporteMensual.zul
+++ b/AventuraSalvaje/WebContent/reporteMensual/reporteMensual.zul
@@ -1,6 +1,6 @@
 <?page title="Reporte del mes" contentType="text/html;charset=UTF-8"?>
 <zk>
-<window title="Reporte del mes" border="normal">
+<window title="Reporte del mes" border="normal apply="com.aventurasalvaje.renta.ReporteMensualCtrl">
 		<listbox id="rentaProductos">
 			<listhead>
 				<listheader label="Nombre" />
