--- a/AventuraSalvaje/WebContent/reporteMensual/reporteMensual.zul
+++ b/AventuraSalvaje/WebContent/reporteMensual/reporteMensual.zul
@@ -1,11 +1,11 @@
 <?page title="Reporte del mes" contentType="text/html;charset=UTF-8"?>
 <zk>
-<window title="Reporte del mes" border="normal apply="com.aventurasalvaje.renta.ReporteMensualCtrl">
+<window title="Reporte del mes" border="normal" apply="com.aventurasalvaje.reportes.ReporteMensualCtrl">
 		<listbox id="rentaProductos">
 			<listhead>
 				<listheader label="Nombre" />
-				<listheader label="Fecha de renta" />
-				<listheader label="Cobro" />
+				<listheader label="Inicio de renta" />
+				<listheader label="Termino de renta" />
 			</listhead>
 		</listbox>
 </window>
