--- a/AventuraSalvaje/WebContent/formatos/reporteMensual.jrxml
+++ b/AventuraSalvaje/WebContent/formatos/reporteMensual.jrxml
@@ -31,8 +31,10 @@
 	<pageHeader>
 		<band height="35" splitType="Stretch">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="455" y="0" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="414" y="0" width="141" height="20"/>
+				<textElement>
+					<font size="14" isBold="true"/>
+				</textElement>
 				<textFieldExpression class="java.util.Date"><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 		</band>
@@ -42,35 +44,35 @@
 			<staticText>
 				<reportElement x="3" y="0" width="100" height="31"/>
 				<textElement>
-					<font size="14"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="220" y="0" width="117" height="31"/>
 				<textElement>
-					<font size="14"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha final]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="455" y="0" width="100" height="31"/>
 				<textElement>
-					<font size="14"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cobro]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="337" y="0" width="118" height="31"/>
 				<textElement>
-					<font size="14"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tiempo de uso]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="103" y="0" width="117" height="31"/>
 				<textElement>
-					<font size="14"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha inicial]]></text>
 			</staticText>
@@ -114,15 +116,22 @@
 	<summary>
 		<band height="47" splitType="Stretch">
 			<textField>
-				<reportElement x="455" y="0" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="455" y="20" width="100" height="20"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["$"+$V{total}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="337" y="0" width="118" height="20"/>
-				<textElement/>
+				<reportElement x="337" y="20" width="118" height="20"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{minutos}+" minutos"]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="237" y="20" width="100" height="20"/>
+				<textElement textAlignment="Center">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total]]></text>
+			</staticText>
 		</band>
 	</summary>
 </jasperReport>
