--- a/AventuraSalvaje/WebContent/formatos/reporteDiario.jrxml
+++ b/AventuraSalvaje/WebContent/formatos/reporteDiario.jrxml
@@ -6,56 +6,104 @@
 	<field name="nombrepro" class="java.lang.String"/>
 	<field name="inic" class="java.util.Date"/>
 	<field name="fin" class="java.util.Date"/>
+	<field name="calculo" class="java.math.BigDecimal"/>
+	<field name="dif" class="java.lang.Long"/>
+	<variable name="total" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{calculo}]]></variableExpression>
+	</variable>
+	<variable name="total2" class="java.lang.Long">
+		<variableExpression><![CDATA[$F{dif}]]></variableExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
 		<band height="79" splitType="Stretch">
 			<staticText>
-				<reportElement x="226" y="25" width="145" height="22"/>
-				<textElement/>
+				<reportElement x="102" y="16" width="388" height="44"/>
+				<textElement>
+					<font size="30" isBold="true"/>
+				</textElement>
 				<text><![CDATA[Reporte Diario de Ventas]]></text>
 			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch"/>
+		<band height="20" splitType="Stretch">
+			<textField pattern="dd/MM/yyyy">
+				<reportElement x="417" y="0" width="128" height="20"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.util.Date"><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="28" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="162" height="28"/>
-				<textElement/>
+				<reportElement x="0" y="0" width="112" height="28"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
 				<text><![CDATA[Nombre Producto	]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="214" y="0" width="157" height="20"/>
-				<textElement/>
+				<reportElement x="112" y="0" width="114" height="20"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
 				<text><![CDATA[Fecha Inicial]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="400" y="0" width="155" height="20"/>
-				<textElement/>
+				<reportElement x="226" y="0" width="103" height="20"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
 				<text><![CDATA[Fecha Final]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="329" y="0" width="100" height="20"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[calculo]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="429" y="0" width="100" height="20"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Tiempo de uso]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="19" splitType="Stretch">
+		<band height="24" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="162" height="18"/>
+				<reportElement x="0" y="0" width="112" height="19"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{nombrepro}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="214" y="0" width="157" height="18"/>
+				<reportElement x="112" y="0" width="114" height="19"/>
 				<textElement/>
 				<textFieldExpression class="java.util.Date"><![CDATA[$F{inic}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="400" y="0" width="155" height="18"/>
+				<reportElement x="226" y="1" width="103" height="18"/>
 				<textElement/>
 				<textFieldExpression class="java.util.Date"><![CDATA[$F{fin}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="329" y="0" width="100" height="18"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA["$"+$F{calculo}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement mode="Opaque" x="429" y="4" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{dif}+"min."]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -66,6 +114,17 @@
 		<band height="54" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="42" splitType="Stretch">
+			<textField>
+				<reportElement x="329" y="0" width="100" height="18"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA["$"+$V{total}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="429" y="0" width="100" height="18"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$V{total2}+"min."]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
